--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --watch",
+    "test": "react-scripts test --testPathIgnorePatterns=src/__tests__/fixtures --watch",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
