updated package json

--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "redux": "^4.0.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test --testPathIgnorePatterns=src/__tests__/fixtures --watch",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm i build:prod"
   },
   "eslintConfig": {
     "extends": "react-app"
