--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "rea-challenge-2",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.11.3",
+    "node": "12.12.0"
+  },
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
@@ -20,11 +24,10 @@
     "redux": "^4.0.5"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --testPathIgnorePatterns=src/__tests__/fixtures --watch",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "npm i build:prod"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
